Writing unit tests for services